# plan-scheduler

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  test-e2e.sh
.github/repo-analysis-output/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
app/: auth.py  config.py  dependencies.py  main.py
app/api/: health.py  plans.py  pubsub.py
app/models/: README.md  __init__.py  plan.py  pubsub.py
app/services/: __init__.py  execution_service.py  firestore_service.py
docs/: cloud-run.md  manual-e2e.md
tests/: conftest.py  test_auth.py  test_config.py  test_dependencies.py  test_execution_service.py  test_firestore_service.py  test_health.py  test_logging.py  test_plan_models.py  test_plans_api.py  test_pubsub_api.py  test_pubsub_models.py  test_spec_status_update.py  test_unified_pubsub_handling.py
